dummy-e2e-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akshay-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
     - http:
        paths:
          - path: /app-1/*
            pathType: Prefix
            backend:
              service:
                name: backend-service-app-1
                port:
                  number: 80
          - path: /app-2/*
            pathType: Prefix
            backend:
              service:
                name: backend-service-app-2
                port:
                  number: 80
